--- a/glowboardsettings/Resources/GlowBoardSettings.plist
+++ b/glowboardsettings/Resources/GlowBoardSettings.plist
@@ -127,6 +127,8 @@
 				<string>Green</string>
 				<string>Red</string>
 				<string>Blue</string>
+				<string>Gray</string>
+				<string>Adaptive</string>
 			</array>
 			<key>validValues</key>
 			<array>
@@ -134,6 +136,8 @@
 				<integer>1</integer>
 				<integer>2</integer>
 				<integer>3</integer>
+				<string>4</string>
+				<string>5</string>
 			</array>
 		</dict>
 		<dict>
@@ -157,6 +161,8 @@
 				<string>Green</string>
 				<string>Red</string>
 				<string>Blue</string>
+				<string>Gray</string>
+				<string>Adaptive</string>
 			</array>
 			<key>validValues</key>
 			<array>
@@ -164,6 +170,8 @@
 				<integer>1</integer>
 				<integer>2</integer>
 				<integer>3</integer>
+				<string>4</string>
+				<string>5</string>
 			</array>
 		</dict>
 		<dict>
