Fixed issue with bouncing icons bouncing when moved off the dock, revamped settings, other changes

--- a/glowboardsettings/Makefile
+++ b/glowboardsettings/Makefile
@@ -6,7 +6,7 @@ LDFLAGS = -F$(THEOS)/frameworks
 include $(THEOS)/makefiles/common.mk
 
 BUNDLE_NAME = GlowBoardSettings
-GlowBoardSettings_FILES = GlowBoardSettings.mm $(wildcard ../../settingskit/*.m)
+GlowBoardSettings_FILES = GlowBoardSettings.mm $(shell find $(THEOS)/include/SettingsKit -name '*.m')
 GlowBoardSettings_INSTALL_PATH = /Library/PreferenceBundles
 GlowBoardSettings_FRAMEWORKS = UIKit CoreGraphics CoreImage MessageUI Social
 GlowBoardSettings_PRIVATE_FRAMEWORKS = Preferences
@@ -14,6 +14,6 @@ GlowBoardSettings_PRIVATE_FRAMEWORKS = Preferences
 include $(THEOS_MAKE_PATH)/bundle.mk
 
 internal-stage::
-	$(ECHO_NOTHING)cp ../../settingskit/Resources/*.png $(THEOS_STAGING_DIR)/Library/PreferenceBundles/GlowBoardSettings.bundle/$(ECHO_END)
+	$(ECHO_NOTHING)cp $(THEOS)/include/SettingsKit/Resources/*.png $(THEOS_STAGING_DIR)/Library/PreferenceBundles/GlowBoardSettings.bundle/$(ECHO_END)
 	$(ECHO_NOTHING)mkdir -p $(THEOS_STAGING_DIR)/Library/PreferenceLoader/Preferences$(ECHO_END)
 	$(ECHO_NOTHING)cp entry.plist $(THEOS_STAGING_DIR)/Library/PreferenceLoader/Preferences/GlowBoardSettings.plist$(ECHO_END)
