--- a/glowboardsettings/Resources/GlowBoardSettings.plist
+++ b/glowboardsettings/Resources/GlowBoardSettings.plist
@@ -88,6 +88,20 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.efrederickson.glowboard.settings</string>
+			<key>key</key>
+			<string>disableNotificationGlow</string>
+			<key>label</key>
+			<string>Disable Notification Glow</string>
+			<key>PostNotification</key>
+			<string>com.efrederickson.glowboard/reloadSettings</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>Colors</string>
