--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -4,6 +4,6 @@ Architecture: iphoneos-arm
 Version: 0.1
 Description: Give your icons a heavenly glow!
 Name: GlowBoard
-Depends: firmware (>= 4.0), mobilesubstrate, preferenceloader
+Depends: firmware (>= 7.0), mobilesubstrate, preferenceloader, applist
 Author: Elijah Frederickson <elijah.frederickson@gmail.com>
 Tag: purpose::extension
