--- a/glowboardsettings/Resources/GlowBoardSettings.plist
+++ b/glowboardsettings/Resources/GlowBoardSettings.plist
@@ -116,6 +116,20 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.efrederickson.glowboard.settings</string>
+			<key>key</key>
+			<string>disableUpdateGlow</string>
+			<key>label</key>
+			<string>Disable Update Glow</string>
+			<key>PostNotification</key>
+			<string>com.efrederickson.glowboard/reloadSettings</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>Colors</string>
@@ -184,6 +198,41 @@
 				<string>5</string>
 			</array>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkListCell</string>
+			<key>detail</key>
+			<string>GBColorSelectorController</string>
+			<key>default</key>
+			<integer>3</integer>
+			<key>defaults</key>
+			<string>com.efrederickson.glowboard.settings</string>
+			<key>key</key>
+			<string>updatedColor</string>
+			<key>label</key>
+			<string>Updated Color</string>
+			<key>PostNotification</key>
+			<string>com.efrederickson.glowboard/reloadSettings</string>
+			<key>validTitles</key>
+			<array>
+				<string>White</string>
+				<string>Light White</string>
+				<string>Red</string>
+				<string>Purple</string>
+				<string>Dark</string>
+				<string>Adaptive</string>
+			</array>
+			<key>validValues</key>
+			<array>
+				<integer>0</integer>
+				<integer>1</integer>
+				<integer>2</integer>
+				<string>3</string>
+				<string>4</string>
+				<string>5</string>
+			</array>
+		</dict>
+
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
